# clipsheet

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: manual-install.md
examples/: clipsheet-demo.cast
samples/: README.md
skills/clipsheet/: SKILL.md
src/clipsheet/: __init__.py  __main__.py  annotate.py  clipper.py  grid.py  sample.py  select.py
src/clipsheet/_skill/: SKILL.md
tests/: test_clip.py
